Pull in async for testing

--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="backbone/test/vendor/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="backbone/test/vendor/json2.js"></script>
   <script type="text/javascript" src="backbone/test/vendor/jquery-1.7.1.js"></script>
+  <script type="text/javascript" src="async.js"></script>
   <script type="text/javascript" src="backbone/test/vendor/qunit.js"></script>
   <script type="text/javascript">
     QUnit.config.reorder = false;
