--- a/test/index.html
+++ b/test/index.html
@@ -35,5 +35,6 @@
   <br /><br />
   <h1 id="qunit-header"><a href="#">Backbone Speed Suite</a></h1>
   <div id="jslitmus_container" style="margin: 20px 10px;"></div>
+  <div id="qunit-fixture"></div>
 </body>
 </html>
