--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
     QUnit.config.reorder = false;
   </script>
   <script type="text/javascript" src="backbone/test/vendor/jslitmus.js"></script>
-  <script type="text/javascript" src="backbone/test/vendor/underscore-1.3.1.js"></script>
+  <script type="text/javascript" src="vendor/underscore.js"></script>
   <script type="text/javascript" src="../lib/backbone-wm-0.9.2.js"></script>
   <script type="text/javascript" src="../backbone.historytracker.js"></script>
 
